--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dia Drive</title>
+    <meta name="description" content="Scoala de soferi Dia Drive | Categ. B B1 B special BE C CE D DE">
+    <meta property="og:title" content="Scoala de Soferi | Dia Drive">
+    <meta property="og:description" content="Scoala de soferi Dia Drive | Categ. B B1 B special BE C CE D DE">
+    <meta property="og:image" content="https://i.imgur.com/sFwT770.png">
+    <meta property="og:url" content="https://www.diadrive.ro/">
+
+    <title>Scoala De Soferi | Dia Drive</title>
   </head>
   <body>
     <div id="root"></div>
