--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000" />
+    <meta name="google-site-verification" content="gIjfFkiulQADJDUWfCThQy-hFDFVA7d7Ht8eocenuGQ" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
