--- a/index.html
+++ b/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000" />
-    <meta name="google-site-verification" content="gIjfFkiulQADJDUWfCThQy-hFDFVA7d7Ht8eocenuGQ" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+    <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+    <link href="/site.webmanifest" rel="manifest" />
+    <link href="/safari-pinned-tab.svg" rel="mask-icon" color="#000000" />
     <meta
-      name="description"
-      content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE"
+      content="gIjfFkiulQADJDUWfCThQy-hFDFVA7d7Ht8eocenuGQ"
+      name="google-site-verification"
     />
-    <meta property="og:title" content="Scoala de Soferi | DiaDrive" />
-    <meta
-      property="og:description"
-      content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE"
-    />
-    <meta property="og:image" content="https://i.imgur.com/sFwT770.png" />
-    <meta property="og:url" content="https://www.diadrive.ro/" />
+    <meta content="#da532c" name="msapplication-TileColor" />
+    <meta content="width=device-width,initial-scale=1" name="viewport" />
+  <!-- Primary Meta Tags -->
+<title>Scoala De Soferi | DiaDrive</title>
+<meta name="title" content="Scoala De Soferi | DiaDrive" />
+<meta name="description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
+Cele mai bune preturi!" />
 
-    <title>Scoala De Soferi | DiaDrive</title>
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.diadrive.ro/" />
+<meta property="og:title" content="Scoala De Soferi | DiaDrive" />
+<meta property="og:description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
+Cele mai bune preturi!" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://www.diadrive.ro/" />
+<meta property="twitter:title" content="Scoala De Soferi | DiaDrive" />
+<meta property="twitter:description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
+Cele mai bune preturi!" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script src="/src/main.jsx" type="module"></script>
   </body>
 </html>
