--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Cele mai bune preturi!" />
 <meta property="og:title" content="Scoala De Soferi | DiaDrive" />
 <meta property="og:description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
 Cele mai bune preturi!" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://i.imgur.com/IicmyeA.png" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
@@ -33,7 +33,7 @@ Cele mai bune preturi!" />
 <meta property="twitter:title" content="Scoala De Soferi | DiaDrive" />
 <meta property="twitter:description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
 Cele mai bune preturi!" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://i.imgur.com/IicmyeA.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
   </head>
