--- a/index.html
+++ b/index.html
@@ -13,29 +13,38 @@
     />
     <meta content="#da532c" name="msapplication-TileColor" />
     <meta content="width=device-width,initial-scale=1" name="viewport" />
-  <!-- Primary Meta Tags -->
-<title>Scoala De Soferi | DiaDrive</title>
-<meta name="title" content="Scoala De Soferi | DiaDrive" />
-<meta name="description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
-Cele mai bune preturi!" />
+    <!-- Primary Meta Tags -->
+    <title>Scoala De Soferi | DiaDrive</title>
+    <meta name="title" content="Scoala De Soferi | DiaDrive" />
+    <meta
+      name="description"
+      content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
+Cele mai bune preturi!"
+    />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.diadrive.ro/" />
-<meta property="og:title" content="Scoala De Soferi | DiaDrive" />
-<meta property="og:description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
-Cele mai bune preturi!" />
-<meta property="og:image" content="https://i.imgur.com/IicmyeA.png" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.diadrive.ro/" />
+    <meta property="og:title" content="Scoala De Soferi | DiaDrive" />
+    <meta
+      property="og:description"
+      content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
+Cele mai bune preturi!"
+    />
+    <meta property="og:image" content="https://i.imgur.com/IicmyeA.png" />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://www.diadrive.ro/" />
-<meta property="twitter:title" content="Scoala De Soferi | DiaDrive" />
-<meta property="twitter:description" content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
-Cele mai bune preturi!" />
-<meta property="twitter:image" content="https://i.imgur.com/IicmyeA.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.diadrive.ro/" />
+    <meta property="twitter:title" content="Scoala De Soferi | DiaDrive" />
+    <meta
+      property="twitter:description"
+      content="Scoala de soferi DiaDrive | Categ. B B1 B special BE C CE D DE |
+Cele mai bune preturi!"
+    />
+    <meta property="twitter:image" content="https://i.imgur.com/IicmyeA.png" />
 
-<!-- Meta Tags Generated with https://metatags.io -->
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
