removed react-snap for stability

--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ Cele mai bune preturi!"
   </head>
   <body>
     <div id="root"></div>
-    <script src="/src/main.jsx" type="module"></script>
+    <script src="/src/index.jsx" type="module"></script>
   </body>
 </html>
